OVN v22.09.4 - xx xxx xxxx
--------------------------

OVN v22.09.3 - 15 Sep 2023
--------------------------
  - Bug fixes

OVN v22.09.2 - 29 Aug 2023
--------------------------
   - Bug fixes
  - Always allow IPv6 Router Discovery, Neighbor Discovery, and Multicast
    Listener Discovery protocols, regardless of ACLs defined.
  - Send ICMP Fragmentation Needed packets back to offending ports when
    communicating with multichassis ports using frames that don't fit through a
    tunnel. This is done only for logical switches that are attached to a
    physical network via a localnet port, in which case multichassis ports may
    have an effective MTU different from regular ports and hence may need this
    mechanism to maintain connectivity with other peers in the network.
  - Add CoPP for the svc_monitor_mac. This addresses CVE-2023-3153.

OVN v22.09.1 - 20 Dec 2022
--------------------------
  - Bug fixes

OVN v22.09.0 - 16 Sep 2022
--------------------------
  - ovn-controller: Add configuration knob, through OVS external-id
    "ovn-encap-df_default" to enable or disable tunnel DF flag.
  - Add option "localnet_learn_fdb" to LSP that will allow localnet
    ports to learn MAC addresses and store them in FDB table.
  - northd: introduce the capability to automatically deploy a load-balancer
    on each logical-switch connected to a logical router where the
    load-balancer has been installed by the CMS. In order to enable the
    feature the CMS has to set install_ls_lb_from_router to true in option
    column of NB_Global table.
  - Added nb_global IPsec options ipsec_encapsulation=true (libreswan)
    and ipsec_forceencaps=true (strongswan) to unconditionally enforce
    NAT-T UDP encapsulation. Requires OVS support for IPsec custom tunnel
    options (which is available in OVS 3.0).
  - Removed possibility of disabling logical datapath groups.
  - Removed the copying of SB's Chassis other_config into external_ids.